--- a/W6D5/react_widgets/index.html
+++ b/W6D5/react_widgets/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title></title>
     <script type="text/javascript" src="./bundle.js"></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+    </script>
   </head>
   <body>
     <div id="root"></div>
